--- a/templates/categories.html
+++ b/templates/categories.html
@@ -7,7 +7,7 @@
 <!-- Hero Section -->
 <div class="header">
     <div class="container">
-        <h1 class="d-flex">Categories</h1>
+        <h1 class="d-flex">{{cats.categoryname}}</h1>
     </div>
 </div>
 <!-- Blog Posts Section -->
