[UPD] about to remove duplicacy

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,6 +42,7 @@
     </div>
   </div>
 
+  {% comment %}
   <div class="main_background">
     <div class="header">
       <div class="container">
@@ -70,4 +71,5 @@
       </div>
     </div>
   </div>
+  {% endcomment %}
 {% endblock content %}
