--- a/templates/about.html
+++ b/templates/about.html
@@ -24,8 +24,8 @@
         <!-- Blog Post Cards Go Here -->
         <div class="w-60">
           {% for admin_info in admin_info_list %}
-            <div class="blog-post-card about_us_content">
-              <div>
+            <div class="blog-post-card about_us_content ">
+              <div class="mt-4">
                 {% if admin_info.profile %}
                 <img src="{{ admin_info.profile.url }}" alt="Admin Image" class="about_us_img">
                 {% endif %}
